--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -1,4 +1,23 @@
-<h1 id="JPA">JPA</h1>
+<html lang="en-US">
+
+<head>
+    <base target="_blank">
+    <meta http-equiv="refresh" content="600">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ERO</title>
+</head><body>
+
+<h1 id="ero">ERO</h1>
+<ul>
+<li><a href="index.html">中長篇系列情色小說（二千七百章）</a> </li>
+<li><a href="read/index.htm">情色成人文學分類瀏覽（九百四十篇）</a> </li>
+<li><a href="class/index.htm">情色成人文學分類瀏覽（二千六百篇）</a> </li>
+<li><a href="gs/101/index1.htm">成人文學薈萃（第一區，一千五百篇）</a> </li>
+<li><a href="story/story1.html">成人文學薈萃（第二區，九百篇）</a></li>
+</ul>
+<h3 id="a">A</h3>
 <table>
 <thead>
 <tr>
@@ -10,13 +29,6 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="index.html">中長篇系列情色小說（二千七百章）</a></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
 <td>紀實小說</td>
 <td></td>
 <td></td>
@@ -122,6 +134,7 @@
 <td><a href="read/book/topfenlei.htm">文學分類</a></td>
 </tr>
 </tbody></table>
+<h3 id="b">B</h3>
 <table>
 <thead>
 <tr>
@@ -133,13 +146,6 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="read/index.htm">情色成人文學分類瀏覽（九百四十篇）</a></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
 <td><a href="read/y1.htm">古典情色</a></td>
 <td><a href="read/y2.htm">現代情色</a></td>
 <td><a href="read/y3.htm">日譯名家</a></td>
@@ -161,6 +167,7 @@
 <td><a href="read/y16.htm">同性之間</a></td>
 </tr>
 </tbody></table>
+<h3 id="c">C</h3>
 <table>
 <thead>
 <tr>
@@ -172,13 +179,6 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="class/index.htm">情色成人文學分類瀏覽（二千六百篇）</a></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
 <td><a href="class/riyi.htm">日譯名家</a></td>
 <td><a href="class/luanlun.htm">亂倫作品</a></td>
 <td><a href="class/duoren.htm">多人群交</a></td>
@@ -228,6 +228,7 @@
 <td><a href="class/web/mengya.htm">性情萌發</a></td>
 </tr>
 </tbody></table>
+<h3 id="d">D</h3>
 <table>
 <thead>
 <tr>
@@ -239,13 +240,6 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="gs/101/index1.htm">成人文學薈萃（第一區，一千五百篇）</a></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
 <td><a href="gs/101/index1.htm">第一頁</a></td>
 <td><a href="gs/102/index2.htm">第二頁</a></td>
 <td><a href="gs/103/index3.htm">第三頁</a></td>
@@ -267,6 +261,7 @@
 <td><a href="read/book/index.htm">更多小說</a></td>
 </tr>
 </tbody></table>
+<h3 id="e">E</h3>
 <table>
 <thead>
 <tr>
@@ -278,7 +273,7 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="story/story1.html">成人文學薈萃（第二區，九百篇）</a></td>
+<td>A</td>
 <td></td>
 <td></td>
 <td></td>
@@ -299,3 +294,4 @@
 <td><a href="story/story10.html">第十頁</a></td>
 </tr>
 </tbody></table>
+</body>
