--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -11,7 +11,7 @@
 
 <h1 id="ero">ERO</h1>
 <ul>
-<li><a href="index.html">中長篇系列情色小說（二千七百章）</a> </li>
+<li><a href="./ero.html">中長篇系列情色小說（二千七百章）</a> </li>
 <li><a href="read/index.htm">情色成人文學分類瀏覽（九百四十篇）</a> </li>
 <li><a href="class/index.htm">情色成人文學分類瀏覽（二千六百篇）</a> </li>
 <li><a href="gs/101/index1.htm">成人文學薈萃（第一區，一千五百篇）</a> </li>
