--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -11,9 +11,9 @@
 
 <h1 id="ero">ERO</h1>
 <ul>
-<li><a href="./ero.html">中長篇系列情色小說（二千七百章）</a> </li>
-<li><a href="read/index.htm">情色成人文學分類瀏覽（九百四十篇）</a> </li>
-<li><a href="class/index.htm">情色成人文學分類瀏覽（二千六百篇）</a> </li>
+<li><a href="./ero.html">中長篇系列小說（二千七百章）</a> </li>
+<li><a href="read/index.htm">成人文學分類瀏覽（九百四十篇）</a> </li>
+<li><a href="class/index.htm">成人文學分類瀏覽（二千六百篇）</a> </li>
 <li><a href="gs/101/index1.htm">成人文學薈萃（第一區，一千五百篇）</a> </li>
 <li><a href="story/story1.html">成人文學薈萃（第二區，九百篇）</a></li>
 </ul>
@@ -38,7 +38,7 @@
 <tr>
 <td><a href="book/abin/index.htm">少年阿賓</a></td>
 <td><a href="book/wangshi/index.htm">往事追憶</a></td>
-<td><a href="book/baijie/index.htm">淫蕩少婦白潔</a></td>
+<td><a href="book/baijie/index.htm">_蕩少婦白潔</a></td>
 <td><a href="book/xiaoqing/index.htm">小青情人</a></td>
 <td><a href="book/tiandi/index.htm">天地之間</a></td>
 </tr>
@@ -53,7 +53,7 @@
 <td><a href="book/zhuiyan/index.htm">校園追艷</a></td>
 <td><a href="book/guandao/index.htm">官道仕途</a></td>
 <td><a href="book/youlong/index.htm">游龍嬉春</a></td>
-<td><a href="book/juese/index.htm">絕色肉慾</a></td>
+<td><a href="book/juese/index.htm">絕色RU</a></td>
 <td><a href="book/bailing/index.htm">白領麗人</a></td>
 </tr>
 <tr>
@@ -68,7 +68,7 @@
 <td><a href="book/ten/index.htm">十景緞</a></td>
 <td><a href="book/jiangshan/index.htm">江山如此多嬌</a></td>
 <td><a href="book/caihua/index.htm">採花行</a></td>
-<td><a href="book/luobing/index.htm">駱冰淫傳</a></td>
+<td><a href="book/luobing/index.htm">駱冰_傳</a></td>
 </tr>
 <tr>
 <td><a href="book/zhaori/index.htm">照日天劫</a></td>
@@ -86,23 +86,23 @@
 </tr>
 <tr>
 <td><a href="book/mowang/index.htm">魔王重生</a></td>
-<td><a href="book/roubang/index.htm">肉棒公主</a></td>
+<td><a href="book/roubang/index.htm">RB公主</a></td>
 <td><a href="book/albd/index.htm">阿里布達年代祭</a></td>
 <td><a href="book/heixing/index.htm">黑星女俠</a></td>
 <td><a href="book/zaishi/index.htm">再世情仇</a></td>
 </tr>
 <tr>
-<td>虐待小說</td>
+<td>ND小說</td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td><a href="book/hushi/index.htm">護士淫夢</a></td>
+<td><a href="book/hushi/index.htm">護士_夢</a></td>
 <td><a href="book/yingyu/index.htm">英語教師</a></td>
 <td><a href="book/gaoshu/index.htm">高樹三姐妹</a></td>
-<td><a href="book/yinmo/index.htm">淫魔故事</a></td>
+<td><a href="book/yinmo/index.htm">_魔故事</a></td>
 <td><a href="book/xingnu/index.htm">終生性奴</a></td>
 </tr>
 <tr>
@@ -113,11 +113,11 @@
 <td><a href="book/chenlun/index.htm">女人沉淪</a></td>
 </tr>
 <tr>
-<td><a href="book/jianmo/index.htm">午夜奸魔</a></td>
+<td><a href="book/jianmo/index.htm">午夜J魔</a></td>
 <td><a href="book/eyu/index.htm">惡欲之源</a></td>
 <td><a href="book/aixiu/index.htm">美少婦哀羞</a></td>
 <td><a href="book/yongduo/index.htm">永墮黑暗</a></td>
-<td><a href="book/mizong/index.htm">迷蹤奸影</a></td>
+<td><a href="book/mizong/index.htm">迷蹤J影</a></td>
 </tr>
 <tr>
 <td>文學評論</td>
@@ -146,21 +146,21 @@
 </tr>
 </thead>
 <tbody><tr>
-<td><a href="read/y1.htm">古典情色</a></td>
-<td><a href="read/y2.htm">現代情色</a></td>
+<td><a href="read/y1.htm">古典</a></td>
+<td><a href="read/y2.htm">現代</a></td>
 <td><a href="read/y3.htm">日譯名家</a></td>
-<td><a href="read/y4.htm">西洋情色</a></td>
+<td><a href="read/y4.htm">西洋</a></td>
 <td><a href="read/y5.htm">浪漫感人</a></td>
 </tr>
 <tr>
-<td><a href="read/y6.htm">伴侶交換</a></td>
+<td><a href="read/y6.htm">BL交換</a></td>
 <td><a href="read/y7.htm">武俠作品</a></td>
 <td><a href="read/y8.htm">科學幻想</a></td>
-<td><a href="read/y9.htm">亂倫作品</a></td>
-<td><a href="read/y10.htm">暴力虐待</a></td>
+<td><a href="read/y9.htm">LL作品</a></td>
+<td><a href="read/y10.htm">暴力ND</a></td>
 </tr>
 <tr>
-<td><a href="read/y11.htm">變態奸魔</a></td>
+<td><a href="read/y11.htm">BTJ魔</a></td>
 <td><a href="read/y13.htm">多人群交</a></td>
 <td><a href="read/y14.htm">教師學生</a></td>
 <td><a href="read/y15.htm">古今名人</a></td>
@@ -180,7 +180,7 @@
 </thead>
 <tbody><tr>
 <td><a href="class/riyi.htm">日譯名家</a></td>
-<td><a href="class/luanlun.htm">亂倫作品</a></td>
+<td><a href="class/luanlun.htm">LL作品</a></td>
 <td><a href="class/duoren.htm">多人群交</a></td>
 <td><a href="class/jiaohuan.htm">伴侶交換</a></td>
 <td><a href="class/jiaoshi.htm">教師學生</a></td>
@@ -190,17 +190,17 @@
 <td><a href="class/langman.htm">浪漫感人</a></td>
 <td><a href="class/txzj.htm">同性之間</a></td>
 <td><a href="class/wuxia.htm">武俠作品</a></td>
-<td><a href="class/baoli.htm">暴力虐待</a></td>
+<td><a href="class/baoli.htm">暴力ND</a></td>
 </tr>
 <tr>
 <td><a href="class/gjmr.htm">古今名人</a></td>
 <td><a href="class/xiyang.htm">西洋文學</a></td>
-<td><a href="class/btjm.htm">變態奸魔</a></td>
+<td><a href="class/btjm.htm">BTJ魔</a></td>
 <td><a href="class/xjqs.htm">鄉間記趣</a></td>
 <td><a href="class/gudian.htm">中國古典</a></td>
 </tr>
 <tr>
-<td><a href="class/llzp2.htm">慾望都市</a></td>
+<td><a href="class/llzp2.htm">YW都市</a></td>
 <td><a href="class/blnd2.htm">激情男女</a></td>
 <td><a href="class/zlys.htm">左鄰右舍</a></td>
 <td><a href="class/khwl.htm">科幻未來</a></td>
@@ -209,9 +209,9 @@
 <tr>
 <td><a href="class/ywsh.htm">意外收穫</a></td>
 <td><a href="class/xyjq.htm">校園記趣</a></td>
-<td><a href="class/qsbd.htm">情色報導</a></td>
-<td><a href="class/jthb.htm">集體換伴</a></td>
-<td><a href="class/qswx.htm">情色武俠</a></td>
+<td><a href="class/qsbd.htm">報導</a></td>
+<td><a href="class/jthb.htm">集體HB</a></td>
+<td><a href="class/qswx.htm">武俠</a></td>
 </tr>
 <tr>
 <td><a href="class/czlq.htm">純真戀情</a></td>
@@ -222,7 +222,7 @@
 </tr>
 <tr>
 <td><a href="class/web/gudian.htm">古典小說</a></td>
-<td><a href="class/web/luanlun.htm">荒誕亂倫</a></td>
+<td><a href="class/web/luanlun.htm">荒誕LL</a></td>
 <td><a href="class/web/xiuxian.htm">休閒磕牙</a></td>
 <td><a href="class/web/wenxian.htm">性愛文獻</a></td>
 <td><a href="class/web/mengya.htm">性情萌發</a></td>
