--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -38,7 +38,7 @@
 <tr>
 <td><a href="book/abin/index.htm">少年阿賓</a></td>
 <td><a href="book/wangshi/index.htm">往事追憶</a></td>
-<td><a href="book/baijie/index.htm">_蕩少婦白潔</a></td>
+<td><a href="book/baijie/index.htm">_蕩XF白潔</a></td>
 <td><a href="book/xiaoqing/index.htm">小青情人</a></td>
 <td><a href="book/tiandi/index.htm">天地之間</a></td>
 </tr>
@@ -103,19 +103,19 @@
 <td><a href="book/yingyu/index.htm">英語教師</a></td>
 <td><a href="book/gaoshu/index.htm">高樹三姐妹</a></td>
 <td><a href="book/yinmo/index.htm">_魔故事</a></td>
-<td><a href="book/xingnu/index.htm">終生性奴</a></td>
+<td><a href="book/xingnu/index.htm">終生XN</a></td>
 </tr>
 <tr>
 <td><a href="book/chest/index.htm">胸大有罪</a></td>
 <td><a href="book/heian/index.htm">黑暗天使</a></td>
-<td><a href="book/nvyou/index.htm">凌辱女友</a></td>
+<td><a href="book/nvyou/index.htm">LR女友</a></td>
 <td><a href="book/wengong/index.htm">女文工團</a></td>
 <td><a href="book/chenlun/index.htm">女人沉淪</a></td>
 </tr>
 <tr>
 <td><a href="book/jianmo/index.htm">午夜J魔</a></td>
 <td><a href="book/eyu/index.htm">惡欲之源</a></td>
-<td><a href="book/aixiu/index.htm">美少婦哀羞</a></td>
+<td><a href="book/aixiu/index.htm">美XF哀羞</a></td>
 <td><a href="book/yongduo/index.htm">永墮黑暗</a></td>
 <td><a href="book/mizong/index.htm">迷蹤J影</a></td>
 </tr>
@@ -153,18 +153,18 @@
 <td><a href="read/y5.htm">浪漫感人</a></td>
 </tr>
 <tr>
-<td><a href="read/y6.htm">BL交換</a></td>
+<td><a href="read/y6.htm">BLJ換</a></td>
 <td><a href="read/y7.htm">武俠作品</a></td>
 <td><a href="read/y8.htm">科學幻想</a></td>
 <td><a href="read/y9.htm">LL作品</a></td>
-<td><a href="read/y10.htm">暴力ND</a></td>
+<td><a href="read/y10.htm">B力ND</a></td>
 </tr>
 <tr>
 <td><a href="read/y11.htm">BTJ魔</a></td>
-<td><a href="read/y13.htm">多人群交</a></td>
+<td><a href="read/y13.htm">多人群J</a></td>
 <td><a href="read/y14.htm">教師學生</a></td>
 <td><a href="read/y15.htm">古今名人</a></td>
-<td><a href="read/y16.htm">同性之間</a></td>
+<td><a href="read/y16.htm">同X之間</a></td>
 </tr>
 </tbody></table>
 <h3 id="c">C</h3>
@@ -181,16 +181,16 @@
 <tbody><tr>
 <td><a href="class/riyi.htm">日譯名家</a></td>
 <td><a href="class/luanlun.htm">LL作品</a></td>
-<td><a href="class/duoren.htm">多人群交</a></td>
-<td><a href="class/jiaohuan.htm">伴侶交換</a></td>
+<td><a href="class/duoren.htm">多人群J</a></td>
+<td><a href="class/jiaohuan.htm">伴侶J換</a></td>
 <td><a href="class/jiaoshi.htm">教師學生</a></td>
 </tr>
 <tr>
 <td><a href="class/kxhx.htm">科學幻想</a></td>
 <td><a href="class/langman.htm">浪漫感人</a></td>
-<td><a href="class/txzj.htm">同性之間</a></td>
+<td><a href="class/txzj.htm">同X之間</a></td>
 <td><a href="class/wuxia.htm">武俠作品</a></td>
-<td><a href="class/baoli.htm">暴力ND</a></td>
+<td><a href="class/baoli.htm">B力ND</a></td>
 </tr>
 <tr>
 <td><a href="class/gjmr.htm">古今名人</a></td>
@@ -224,8 +224,8 @@
 <td><a href="class/web/gudian.htm">古典小說</a></td>
 <td><a href="class/web/luanlun.htm">荒誕LL</a></td>
 <td><a href="class/web/xiuxian.htm">休閒磕牙</a></td>
-<td><a href="class/web/wenxian.htm">性愛文獻</a></td>
-<td><a href="class/web/mengya.htm">性情萌發</a></td>
+<td><a href="class/web/wenxian.htm">文獻</a></td>
+<td><a href="class/web/mengya.htm">X情萌發</a></td>
 </tr>
 </tbody></table>
 <h3 id="d">D</h3>
