--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -11,11 +11,11 @@
 
 <h1 id="ero">ERO</h1>
 <ul>
-<li><a href="./ero.html">中長篇系列小說（二千七百章）</a> </li>
-<li><a href="read/index.htm">成人文學分類瀏覽（九百四十篇）</a> </li>
-<li><a href="class/index.htm">成人文學分類瀏覽（二千六百篇）</a> </li>
-<li><a href="gs/101/index1.htm">成人文學薈萃（第一區，一千五百篇）</a> </li>
-<li><a href="story/story1.html">成人文學薈萃（第二區，九百篇）</a></li>
+<li><a href="./ero.html">SHOW</a> </li>
+<li><a href="read/index.htm">READ</a> </li>
+<li><a href="class/index.htm">CLASS</a> </li>
+<li><a href="gs/101/index1.htm">GIRLs</a> </li>
+<li><a href="story/story1.html">STORY</a></li>
 </ul>
 <h3 id="a">A</h3>
 <table>
