--- a/app/contents/app/app/contents/js/contents/ero.html
+++ b/app/contents/app/app/contents/js/contents/ero.html
@@ -2,6 +2,11 @@
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <base target="_blank">
+    <meta http-equiv="refresh" content="600">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>ERO</title>
  <style type="text/css">
   BODY { font-family : monospace, sans-serif;  color: black;}
