--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -38,7 +38,7 @@
 <tr>
 <td><a href="book/abin/index.htm">少年阿賓</a></td>
 <td><a href="book/wangshi/index.htm">往事追憶</a></td>
-<td><a href="book/baijie/index.htm">_蕩XF白潔</a></td>
+<td><a href="book/baijie/index.htm">i蕩XF白潔</a></td>
 <td><a href="book/xiaoqing/index.htm">小青情人</a></td>
 <td><a href="book/tiandi/index.htm">天地之間</a></td>
 </tr>
@@ -68,7 +68,7 @@
 <td><a href="book/ten/index.htm">十景緞</a></td>
 <td><a href="book/jiangshan/index.htm">江山如此多嬌</a></td>
 <td><a href="book/caihua/index.htm">採花行</a></td>
-<td><a href="book/luobing/index.htm">駱冰_傳</a></td>
+<td><a href="book/luobing/index.htm">駱冰i傳</a></td>
 </tr>
 <tr>
 <td><a href="book/zhaori/index.htm">照日天劫</a></td>
@@ -99,10 +99,10 @@
 <td></td>
 </tr>
 <tr>
-<td><a href="book/hushi/index.htm">護士_夢</a></td>
+<td><a href="book/hushi/index.htm">護士i夢</a></td>
 <td><a href="book/yingyu/index.htm">英語教師</a></td>
 <td><a href="book/gaoshu/index.htm">高樹三姐妹</a></td>
-<td><a href="book/yinmo/index.htm">_魔故事</a></td>
+<td><a href="book/yinmo/index.htm">i魔故事</a></td>
 <td><a href="book/xingnu/index.htm">終生XN</a></td>
 </tr>
 <tr>
