--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -7,6 +7,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ERO</title>
+<style>
+html,
+body {
+
+		color: rgb(120, 120, 120);
+		background-color: rgb(1, 1, 1);
+		font-size: 3em;
+}
+
+a,
+a.visited {
+	color: inherit;
+	text-decoration: none;
+}
+
+table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
+	color: rgb(120, 120, 120);
+	background-color: rgb(1, 1, 1);
+	text-decoration: none;
+}
+	
+.mono { font-family: monospace, monospace, monospace; }
+</style>
 </head><body>
 
 <h1 id="ero">ERO</h1>
