--- a/app/contents/app/app/contents/js/contents/ero.html
+++ b/app/contents/app/app/contents/js/contents/ero.html
@@ -29,6 +29,11 @@
   .LINK  { color: aqua;   }
   .SOCK  { color: fuchsia;}
   .EXEC  { color: green;  }
+a,
+a.visited {
+	color: inherit;
+	text-decoration: none;
+}
  </style>
 </head>
 <body>
