--- a/app/contents/app/app/contents/js/contents/ero.html
+++ b/app/contents/app/app/contents/js/contents/ero.html
@@ -37,7 +37,7 @@ a.visited {
  </style>
 </head>
 <body>
-	<h1>Directory Tree</h1><p>
+	<h1>Tree</h1><p>
 	├── <a href="./book/">book</a><br>
 	│   ├── <a href="./book/abin/">abin</a><br>
 	│   │   ├── <a href="./book/abin/10.htm">10.htm</a><br>
