--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -38,6 +38,6 @@ table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
 <li><a href="class/index.htm">CLASS</a> </li>
 <li><a href="gs/101/index1.htm">GIRLs</a> </li>
 <li><a href="story/story1.html">STORY</a></li>
-<li><a href="./ero.html">SHOW</a> </li>
+<li><a href="./sha3_ero.html">SHOW</a> </li>
 </ul>
 </body>
