--- a/app/contents/app/app/contents/js/contents/sha3_x_1.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x_1.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ERO</title>
+    <title>BOOK</title>
 <style>
 html,
 body {
@@ -43,7 +43,7 @@ table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
                                         <tr align=center>
                                             <td width=100% align=center bgcolor=#0080C0 colspan=8>
                                                 <a href="index.html">
-                                                    <font color=#FEF7ED>book</font>
+                                                    <font color=#FEF7ED>BOOK</font>
                                                 </a>
                                         <tr align=center>
                                             <td width=100% align=center bgcolor=#D6EEF2 colspan=8>紀實小說
