--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -38,12 +38,12 @@ table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
 Narasimhan is stepping down immediately, while Niccol will leave burrito chain Chipotle Mexican Grill at the end of this month and start his new role on September 9, Starbucks said on Tuesday.</p>
 <p>The appointment sparked a sharp share price reaction at both companies, with Starbucks rising more than 20 per cent and Chipotle falling 12 per cent in early New York trading.
 The abrupt swap comes just over a year since Narasimhan was appointed to run Starbucks, from UK-based consumer products company Reckitt, the third chief executive in less than two-and-a-half years.
-<li><a href="./sha3_x_1.html">BOOK</a> </li>
-<li><a href="read/index.htm">READ</a> </li>
-<li><a href="class/index.htm">CLASS</a> </li>
-<li><a href="gs/101/index1.htm">GIRLs</a> </li>
-<li><a href="story/story1.html">STORY</a></li>
-<li><a href="./sha3_ero.html">SHOW</a> </li>
+.<a href="./sha3_x_1.html">BOOK</a>
+.<a href="read/index.htm">READ</a>
+.<a href="class/index.htm">CLASS</a>
+.<a href="gs/101/index1.htm">GIRLs</a>
+.<a href="story/story1.html">STORY</a>
+.<a href="./sha3_ero.html">SHOW</a>
 </p>
 <p>The decision to oust him was made after Starbucks came under attack from activist investor Elliott Management and the coffee chain’s former longtime leader Howard Schultz publicly criticised the management’s strategy.
 Narasimhan oversaw the company’s first decline in comparable sales since 2020. Schultz, in charge through much of the company’s global growth, had publicly criticised Narasimhan and privately expressed his opposition to a settlement with Elliott, which had been holding talks with Starbucks over a number of demands, including board representation, the FT reported previously.
