--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -41,7 +41,14 @@ The abrupt swap comes just over a year since Narasimhan was appointed to run Sta
 </p>
 <p>The decision to oust him was made after Starbucks came under attack from activist investor Elliott Management and the coffee chain’s former longtime leader Howard Schultz publicly criticised the management’s strategy.
 Narasimhan oversaw the company’s first decline in comparable sales since 2020. Schultz, in charge through much of the company’s global growth, had publicly criticised Narasimhan and privately expressed his opposition to a settlement with Elliott, which had been holding talks with Starbucks over a number of demands, including board representation, the FT reported previously.
-The board of directors began a conversation about replacing Narasimhan in recent months, the company’s longest serving director, Mellody Hobson, said in an interview on CNBC on Tuesday. “I made an overture through someone to Brian and he took the call,” she said.</p>
+The board of directors began a conversation about replacing Narasimhan in recent months, the company’s longest serving director, Mellody Hobson, said in an interview on CNBC on Tuesday. “I made an overture through someone to Brian and he took the call,” she said.
+.<a href="./sha3_x_1.html">BOOK</a>
+.<a href="read/index.htm">READ</a>
+.<a href="class/index.htm">CLASS</a>
+.<a href="gs/101/index1.htm">GIRLs</a>
+.<a href="story/story1.html">STORY</a>
+.<a href="./sha3_ero.html">SHOW</a>
+</p>
 <p>Elliott, which controls a sizeable minority stake, said it had engaged with the company’s board for two months “regarding our perspectives on the company’s key issues” and the CEO change was “a transformational step forward”.
 As part of the changes announced on Tuesday, current board chair Hobson, who has called Schultz a close friend and has served on the board for 19 years, will be replaced as chair by Niccol and instead named lead independent director.
 “[Niccol] has my respect and full support,” said Schultz, who is the company’s biggest independent shareholder and retains board observer rights and other perks. “I thank Mellody and the Starbucks board for their deep commitment to shaping the future of this remarkable global phenomenon that is Starbucks.”&nbsp;&nbsp;</p>
@@ -54,12 +61,6 @@ The company’s financial officer Rachel Ruggeri will be chief in the interim.</
 Narasimhan is stepping down immediately, while Niccol will leave burrito chain Chipotle Mexican Grill at the end of this month and start his new role on September 9, Starbucks said on Tuesday.</p>
 <p>The appointment sparked a sharp share price reaction at both companies, with Starbucks rising more than 20 per cent and Chipotle falling 12 per cent in early New York trading.
 The abrupt swap comes just over a year since Narasimhan was appointed to run Starbucks, from UK-based consumer products company Reckitt, the third chief executive in less than two-and-a-half years.
-.<a href="./sha3_x_1.html">BOOK</a>
-.<a href="read/index.htm">READ</a>
-.<a href="class/index.htm">CLASS</a>
-.<a href="gs/101/index1.htm">GIRLs</a>
-.<a href="story/story1.html">STORY</a>
-.<a href="./sha3_ero.html">SHOW</a>
 </p>
 <p>The decision to oust him was made after Starbucks came under attack from activist investor Elliott Management and the coffee chain’s former longtime leader Howard Schultz publicly criticised the management’s strategy.
 Narasimhan oversaw the company’s first decline in comparable sales since 2020. Schultz, in charge through much of the company’s global growth, had publicly criticised Narasimhan and privately expressed his opposition to a settlement with Elliott, which had been holding talks with Starbucks over a number of demands, including board representation, the FT reported previously.
