--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -46,8 +46,8 @@ Narasimhan oversaw the company’s first decline in comparable sales since 2020
  <a href="class/index.htm">classical</a>
  <a href="gs/101/index1.htm">girls</a>
  <a href="story/story1.html">story</a>
- <a href="./sha3_ero.html">show</a>
-. Schultz, in charge through much of the company’s global growth, had publicly criticised Narasimhan and privately expressed his opposition to a settlement with Elliott, which had been holding talks with Starbucks over a number of demands, including board representation, the FT reported previously.
+ <a href="./sha3_ero.html">show</a>. 
+Schultz, in charge through much of the company’s global growth, had publicly criticised Narasimhan and privately expressed his opposition to a settlement with Elliott, which had been holding talks with Starbucks over a number of demands, including board representation, the FT reported previously.
 The board of directors began a conversation about replacing Narasimhan in recent months, the company’s longest serving director, Mellody Hobson, said in an interview on CNBC on Tuesday. “I made an overture through someone to Brian and he took the call,” she said.
 </p>
 <p>Elliott, which controls a sizeable minority stake, said it had engaged with the company’s board for two months “regarding our perspectives on the company’s key issues” and the CEO change was “a transformational step forward”.
