--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html><html><head>
-<meta http-equiv="refresh" content="0; URL='https://hp.com/'" />
+<meta http-equiv="refresh" content="0; URL='https://duckduckgo.com/'" />
 </head><body></body></html>
