--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -6,32 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ERO</title>
-<style>
-html,
-body {
-
-		color: rgb(120, 120, 120);
-		background-color: rgb(1, 1, 1);
-}
-
-a,
-a.visited {
-	color: inherit;
-	text-decoration: none;
-}
-
-table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
-	color: rgb(120, 120, 120);
-	background-color: rgb(1, 1, 1);
-	text-decoration: none;
-}
-	
-.mono { font-family: monospace, monospace, monospace; }
-</style>
+	<link rel="stylesheet" href="/styles.css">
+    <title>Schultz</title>
 </head><body>
 
-<h1 id="ero">ERO</h1>
+<h1>Schultz Report</h1>
 
 <p>Please use the sharing tools found via the share button at the top or side of articles. Copying articles to share with others is a breach of <a href="https://www.ft.com">FT.com</a> <a href="https://help.ft.com/help/legal-privacy/terms-conditions/">T&amp;Cs</a> and <a href="https://help.ft.com/help/legal-privacy/copyright/copyright-policy/">Copyright Policy</a>. Email <a href="mailto:licensing@ft.com">licensing@ft.com</a> to buy additional rights. Subscribers may share up to 10 or 20 articles per month using the gift article service. More information can be <a href="https://www.ft.com/tour">found here</a>.<br><a href="https://www.ft.com/content/4f9dd365-e20f-4c42-b443-48058990a006">Subscribe to read</a></p>
 <p>Starbucks has ousted chief executive Laxman Narasimhan, replacing him with Chipotle’s Brian Niccol, as the world’s largest coffee chain responds to falling sales and activist pressure.
@@ -94,3 +73,4 @@ The company’s financial officer Rachel Ruggeri will be chief in the interim.</
 
 
 </body>
+
