--- a/app/contents/app/app/contents/js/contents/sha3_x_1.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x_1.html
@@ -7,28 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BOOK</title>
-<style>
-html,
-body {
-
-		color: rgb(120, 120, 120);
-		background-color: rgb(1, 1, 1);
-}
-
-a,
-a.visited {
-	color: inherit;
-	text-decoration: none;
-}
-
-table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
-	color: rgb(120, 120, 120);
-	background-color: rgb(1, 1, 1);
-	text-decoration: none;
-}
-	
-.mono { font-family: monospace, monospace, monospace; }
-</style>
+	<link rel="stylesheet" href="/styles.css">
 </head><body>
 
 
