--- a/app/contents/app/app/contents/js/contents/sha3_x.html
+++ b/app/contents/app/app/contents/js/contents/sha3_x.html
@@ -6,8 +6,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/styles.css">
     <title>Schultz</title>
+<style>
+html,
+body {
+
+		color: rgb(120, 120, 120);
+		background-color: rgb(1, 1, 1);
+}
+
+a,
+a.visited {
+	color: inherit;
+	text-decoration: none;
+}
+
+table, tr, th ,td ,tr:nth-child(even),tr:nth-child(odd){
+	color: rgb(120, 120, 120);
+	background-color: rgb(1, 1, 1);
+	text-decoration: none;
+}
+	
+.mono { font-family: monospace, monospace, monospace; }
+</style>
 </head><body>
 
 <h1>Schultz Report</h1>
@@ -73,4 +94,5 @@ The company’s financial officer Rachel Ruggeri will be chief in the interim.</
 
 
 </body>
+
 
